# dali_rust

./: .gitignore  README.md  pipeline.py  test_batch_comparison.py  test_dalicon.py  test_dp.py  test_e2e.py  test_expanded_corpus.py  test_expanded_parsi_filter95.py  test_filter95.py  test_parsi.py  test_wolf.py
dali_rust/: Cargo.toml  DEFICIENCY_RMSD.md  bench_compare.py  bench_results_fair.json  bench_results_full.json
dali_rust/dali-core/: Cargo.toml
dali_rust/dali-core/benches/: kernels.rs
dali_rust/dali-core/src/: lib.rs  pipeline.rs  store.rs
dali_rust/dali-core/src/dalicon/: mod.rs
dali_rust/dali-core/src/dp/: mod.rs
dali_rust/dali-core/src/filter95/: mod.rs
dali_rust/dali-core/src/io/: dat.rs  domain.rs  dssp.rs  import.rs  mod.rs  pdb.rs  secstr.rs
dali_rust/dali-core/src/numerics/: fitz.rs  kabsch.rs  mod.rs  nw.rs  rounding.rs  scoring.rs
dali_rust/dali-core/src/parsi/: align.rs  domain_tree.rs  mod.rs  protein_io.rs  scoring.rs  stack.rs
dali_rust/dali-core/src/types/: alignment.rs  distance.rs  mod.rs  protein.rs
dali_rust/dali-core/src/wolf/: compare.rs  geometry.rs  mod.rs  spatial_hash.rs
dali_rust/dali-core/tests/: test_dalicon.rs  test_dat_reader.rs  test_dp.rs  test_e2e.rs  test_filter95.rs  test_import.rs  test_parsi.rs  test_scoring.rs  test_store.rs  test_wolf.rs
dalicon/: __init__.py  dalicon.py  lean.py  output.py  scoring.py  testi.py
docs/: DEFICIENCY_REPORT_DPAM_INTEGRATION.md  benchmark_results.md  dssp_entry_points.md  optimization.md  parsi_analysis.md  parsi_mismatch_analysis.md  performance_ceiling.md  (+3 more)
(+90 files in other folders)
