[package]
name = "dali-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.16"
approx = "0.5"
pdbtbx = "0.12"
flate2 = "1"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
bench-bin = ["serde", "serde_json"]

[[bench]]
name = "kernels"
harness = false

[[bin]]
name = "bench_head2head"
required-features = ["bench-bin"]
